--- a/index.html
+++ b/index.html
@@ -1,4 +1,13 @@
  <!DOCTYPE html>
     <html>
-        
+        <head>
+            
+        </head>
+        <body>
+            <ul class="messages"></ul>
+            <form>
+                <input type="text" class="input" autocomplete="off" autofocus />
+                <button>Send</button>
+            </form>
+        </body>
     </html>
