--- a/index.html
+++ b/index.html
@@ -1,13 +1,10 @@
  <!DOCTYPE html>
     <html>
         <head>
-            
+            <title>Real-time Chat App</title>
+            <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
         </head>
         <body>
-            <ul class="messages"></ul>
-            <form>
-                <input type="text" class="input" autocomplete="off" autofocus />
-                <button>Send</button>
-            </form>
+            
         </body>
     </html>
