--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
             <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
         </head>
         <body>
+            <ul class="messages"></ul>
             
         </body>
     </html>
