--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
         </head>
         <body>
             <ul class="messages"></ul>
-            
+            <form>
+                
+            </form>
         </body>
     </html>
