--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
         <body>
             <ul class="messages"></ul>
             <form>
+                <input type="text" class="input" autocomplete="off" autofocus />
                 
             </form>
         </body>
