--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <ul class="messages"></ul>
             <form>
                 <input type="text" class="input" autocomplete="off" autofocus />
-                
+                <button>Send</button>
             </form>
         </body>
     </html>
