--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
             <title>Real-time Chat App</title>
             <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+            <link rel="stylesheet" href="index.css">
         </head>
         <body>
             <ul class="messages"></ul>
