--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
                 <input type="text" class="input" autocomplete="off" autofocus />
                 <button>Send</button>
             </form>
+        <script src="main.js"></script>
         </body>
     </html>
