--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
         <head>
             <title>Real-time Chat App</title>
             <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
+             <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
             <style>
                 body {
                     margin: 0;
@@ -88,6 +89,7 @@
                     messages.appendChild(li);
                     window.scrollTo(0, document.body.scrollHeight);
                 }
+
             </script>
         </body>
     </html>
