--- a/index.html
+++ b/index.html
@@ -67,28 +67,19 @@
                 <button>Send</button>
             </form>
             <script>
-                const form = document.querySelector("form");
-                const input = document.querySelector(".input");
-                const messages = document.querySelector(".messages");
-                const username = prompt("Please enter a username: ", "");
-
-                form.addEventListener("submit", function(event) {
+                const socket = io();
+                    form.addEventListener("submit", function(event) {
                     event.preventDefault();
 
                     addMessage(username + ": " + input.value);
 
+                    socket.emit("chat_message", {
+                        message: input.value
+                    });
+
                     input.value = "";
                     return false;
                 }, false);
-
-                addMessage("You have joined the chat as '" + username  + "'.");
-
-                function addMessage(message) {
-                    const li = document.createElement("li");
-                    li.innerHTML = message;
-                    messages.appendChild(li);
-                    window.scrollTo(0, document.body.scrollHeight);
-                }
 
             </script>
         </body>
