--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
         <head>
             <title>Real-time Chat App</title>
             <meta name="viewport" content="width=device-width,minimum-scale=1,initial-scale=1">
-             <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
             <style>
                 body {
                     margin: 0;
@@ -66,9 +65,15 @@
                 <input type="text" class="input" autocomplete="off" autofocus />
                 <button>Send</button>
             </form>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.dev.js"></script>
             <script>
+                const form = document.querySelector("form");
+                const input = document.querySelector(".input");
+                const messages = document.querySelector(".messages");
+                const username = prompt("Please enter a nickname: ", "");
                 const socket = io();
-                    form.addEventListener("submit", function(event) {
+
+                form.addEventListener("submit", function(event) {
                     event.preventDefault();
 
                     addMessage(username + ": " + input.value);
@@ -81,6 +86,28 @@
                     return false;
                 }, false);
 
+                socket.on("chat_message", function(data) {
+                    addMessage(data.username + ": " + data.message);
+                });
+
+                socket.on("user_join", function(data) {
+                    addMessage(data + " just joined the chat!");
+                });
+
+                socket.on("user_leave", function(data) {
+                    addMessage(data + " has left the chat.");
+                });
+
+                addMessage("You have joined the chat as '" + username  + "'.");
+                socket.emit("user_join", username);
+
+                function addMessage(message) {
+                    const li = document.createElement("li");
+                    li.innerHTML = message;
+                    messages.appendChild(li);
+                    window.scrollTo(0, document.body.scrollHeight);
+                }
             </script>
         </body>
     </html>
+    
